/**
 * RetroEdge Educational Game Engine
 * 
 * Copyright (c) 2025 Nicola Christian Barbieri
 * Licensed under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
 * https://creativecommons.org/licenses/by-nc-sa/4.0/deed.en
 */

package enums;

public enum EngineState {
	STARTING, ENTERING, EXITING, RUNNING, PAUSED, SHOWING_DIALOG, CUTSCENE
}
